--- a/Guide_Pratique.html
+++ b/Guide_Pratique.html
@@ -17,7 +17,7 @@
 
 	<link href="css/site.css?v=1.0.13" rel="stylesheet" type="text/css" />
 	<link href="css/common.css?ts=1445243438" rel="stylesheet" type="text/css" />
-	<link href="css/3.css?ts=1445243438" rel="stylesheet" type="text/css" />
+	<link href="css/Guide_Pratique.css?ts=1445243438" rel="stylesheet" type="text/css" />
 	
 	<script type="text/javascript">var currLang = '';</script>		
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
