--- a/Accueil.html
+++ b/Accueil.html
@@ -28,23 +28,35 @@
 
 <body><div class="root"><div class="vbox wb_container" id="wb_header">
 	
+<!-- Début Div pour le menu -->
 <div id="wb_element_instance0" class="wb_element">
 	<ul class="hmenu">
-		<li class="active"><a href="Accueil.html" target="_self" title="Accueil">Accueil</a></li>
-		<li><a href="Evenements.html" target="_self" title="Evénements">Evénements</a></li>
-		<li><a href="A_Visiter.html" target="_self" title="A visiter">A visiter</a></li>
-		<li><a href="Guide_Pratique.html"  title="Guide pratique">Guide pratique</a></li>
+		<li class="active"><a href="Accueil.html" target="_self" title="Accueil">Accueil</a></li> <!-- On peut enlever le target ?! -->
+		<li><a href="Evenements.html" target="_self" title="Evénements">Evénements</a></li> <!-- On peut enlever le target ?! -->
+		<li><a href="A_Visiter.html" target="_self" title="A visiter">A visiter</a></li> <!-- On peut enlever le target ?! -->
+		<li><a href="Guide_Pratique.html"  title="Guide pratique">Guide pratique</a></li> <!-- On peut enlever le target ?! -->
 	</ul>
-</div><div id="wb_element_instance1" class="wb_element"><div></div></div>
-<div id="wb_element_instance2" class="wb_element" style=" line-height: normal;">
-<h4 class="wb-stl-pagetitle" style="text-align: center;"><strong>Ile De France</strong></h4>
+</div>
+<!-- Fin Div pour le menu -->
 
-<p style="text-align: center;"> </p>
-</div><div id="wb_element_instance8" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle" style="text-align: center;">Paris</h4>
 
-<p style="text-align: center;"> </p>
-</div><div id="wb_element_instance9" class="wb_element"><div></div></div><div id="wb_element_instance10" class="wb_element"><div></div></div><div id="wb_element_instance11" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal" style="text-align: center;"><font face="Sylfaen" color="#ffffff"><span style="font-size: 20px; line-height: normal;">La region Parisienne</span></font></p>
-</div><div id="wb_element_instance12" class="wb_element"><a class="wb_button" href="A-visiter/"><span>Savoir plus</span></a></div><div id="wb_element_instance13" class="wb_element" style=" line-height: normal;"><p class="wb-stl-footer" style="text-align: center;"><span class="wb-stl-highlight">GUIDE DE VOYAGE</span></p></div></div>
+<div id="wb_element_instance1" class="wb_element"><!-- <div></div> Je ne vois pas l'utilité de cette div --> </div> <!-- instance1 permet d'avoir les éléments dans l'image de ne pas s'ecraser  -->
+
+<!-- Début Div pour le titre "ile de france" -->
+<div id="wb_element_instance2" class="wb_element" style=" line-height: normal;"><!-- Aligner "ile de france" à gauche  (à mettre dans le css ?) -->
+<h4 class="wb-stl-pagetitle" style="text-align: center;"><strong>Ile De France</strong></h4> <!-- Ecrit "ile de france" -->
+<p style="text-align: center;"> </p><!-- ne sert à rien ?! -->
+</div>
+<!-- Fin Div pour le titre "ile de france-->
+
+
+<div id="wb_element_instance8" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle" style="text-align: center;">Paris</h4></div> <!-- Affiche "Paris" au centre -->
+
+<p style="text-align: center;"> </p> <!-- ne sert à rien ?! -->
+
+<div id="wb_element_instance9" class="wb_element"><div></div></div><div id="wb_element_instance10" class="wb_element"><div></div></div>
+<div id="wb_element_instance11" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal" style="text-align: center;"><font face="Sylfaen" color="#ffffff"><span style="font-size: 20px; line-height: normal;">La region Parisienne</span></font></p></div> <!-- Ligne trop bizarre à modifier -->
+<div id="wb_element_instance12" class="wb_element"><a class="wb_button" href="A_Visiter.html"><span>Savoir plus</span></a></div><div id="wb_element_instance13" class="wb_element" style=" line-height: normal;"><p class="wb-stl-footer" style="text-align: center;"><span class="wb-stl-highlight">GUIDE DE VOYAGE</span></p></div></div> <!-- A modifier !!! -->                            
 <div class="vbox wb_container" id="wb_main">
 	
 <div id="wb_element_instance14" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1" style="text-align: center;">Visites inoubliables</h1></div><div id="wb_element_instance15" class="wb_element"><img alt="" src="gallery/686bf0c5fd902395485feb2ef50c6be7_400x200.jpg"></div><div id="wb_element_instance16" class="wb_element"><img alt="" src="gallery/723f74ae189bb232086ca1c5cf24511b_400x200.jpg"></div><div id="wb_element_instance17" class="wb_element" style=" line-height: normal;"><h2 class="wb-stl-heading2">Venez découvrir notre région</h2>
