--- a/Accueil.html
+++ b/Accueil.html
@@ -149,16 +149,12 @@
 <div style="font-size: 1px; overflow: hidden; line-height: 1px; padding: 0; background: transparent; float: none; position: relative; margin: 1px 0 0 0; width: 100%; height: 1px; left: 0; top: 50%; border-top: 1px solid #b5a48d;"></div>
 </div>
 
-<div id="wb_element_instance29" class="wb_element">
+<div id="div_trait_conseilsdevoyage" class="wb_element">
 <div style="font-size: 1px; overflow: hidden; line-height: 1px; padding: 0; background: transparent; float: none; position: relative; margin: 1px 0 0 0; width: 100%; height: 1px; left: 0; top: 50%; border-top: 1px solid #b5a48d;"></div>
 </div>
 
 <div id="wb_element_instance30" class="wb_element" style="width: 100%;">
-<<<<<<< HEAD
 			
-=======
-
->>>>>>> 9d31a731fbedf2509b8d9b11705b5f914f010872
 			<script type="text/javascript">
 				$(function() {
 					var block = $("#wb_element_instance30");
@@ -174,11 +170,25 @@
 				});
 			</script>
 			</div></div>
+			
+			
 <div class="vbox wb_container" id="wb_footer" style="height: 139px;">
 	
-<div id="wb_element_instance3" class="wb_element"><a href="https://www.facebook.com"><img alt="" src="gallery/620e9a7ba8fb46b75a618371403c9881_32x32.png"></a></div><div id="wb_element_instance4" class="wb_element"><a href="https://twitter.com/"><img alt="" src="gallery/b43a79758d09eb281e1de2dbbba6525e_32x32.png"></a></div><div id="wb_element_instance5" class="wb_element" style=" line-height: normal;"><p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
-
-<p class="wb-stl-footer" style="text-align: center;">© 2015 <a href="http://idf.16mb.com">idf.16mb.com</a></p>
+<div id="wb_element_instance3" class="wb_element">
+	<a href="https://www.facebook.com">
+		<img alt="" src="gallery/620e9a7ba8fb46b75a618371403c9881_32x32.png">
+	</a>
+</div>
+		
+<div id="wb_element_instance4" class="wb_element">
+	<a href="https://twitter.com/">
+		<img alt="" src="gallery/b43a79758d09eb281e1de2dbbba6525e_32x32.png">
+	</a>
+</div>
+	
+<div id="div_ecriture_nombasdepage" class="wb_element" style=" line-height: normal;">
+	<p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
+	<p class="wb-stl-footer" style="text-align: center;">© 2015 <a href="http://idf.16mb.com">idf.16mb.com</a></p>
 </div>
 
 <div id="wb_element_instance6" class="wb_element"><div class="wb-stl-footer" style="white-space: nowrap;">Membre de <i class="icon-wb-logo"></i><a href="http://zyro.com/examples/" target="_blank" title="Zyro - Website Builder">Zyro</a></div><script type="text/javascript">
