Accueil.html renomage

--- a/Accueil.html
+++ b/Accueil.html
@@ -174,6 +174,7 @@
 			
 <div class="vbox wb_container" id="wb_footer" style="height: 139px;">
 	
+
 <div id="wb_element_instance3" class="wb_element">
 	<a href="https://www.facebook.com">
 		<img alt="" src="gallery/620e9a7ba8fb46b75a618371403c9881_32x32.png">
@@ -181,7 +182,7 @@
 </div>
 		
 <div id="wb_element_instance4" class="wb_element">
-	<a href="https://twitter.com/">
+	<a href="https://www.facebook.com">
 		<img alt="" src="gallery/b43a79758d09eb281e1de2dbbba6525e_32x32.png">
 	</a>
 </div>
@@ -191,7 +192,13 @@
 	<p class="wb-stl-footer" style="text-align: center;">© 2015 <a href="http://idf.16mb.com">idf.16mb.com</a></p>
 </div>
 
-<div id="wb_element_instance6" class="wb_element"><div class="wb-stl-footer" style="white-space: nowrap;">Membre de <i class="icon-wb-logo"></i><a href="http://zyro.com/examples/" target="_blank" title="Zyro - Website Builder">Zyro</a></div><script type="text/javascript">
+<!-- Affiche Zyro en bas, à enlever ??
+<div id="wb_element_instance6" class="wb_element">
+	<div class="wb-stl-footer" style="white-space: nowrap;">Membre de <i class="icon-wb-logo"></i>
+	<a href="http://zyro.com/examples/" target="_blank" title="Zyro - Website Builder">Zyro</a>
+	</div>
+
+	<script type="text/javascript">
 				var _siteProBadge = _siteProBadge || [];
 				_siteProBadge.push({hash: "69cb9287f5604756460be9537d2c07ff", cont: "wb_element_instance6"});
 
@@ -203,7 +210,21 @@
 					var s = document.getElementsByTagName("script")[0];
 					s.parentNode.insertBefore(script, s);
 				})();
-				</script></div><div id="wb_element_instance7" class="wb_element"><img alt="" src="gallery/811ef58a913e365f552822db5ab1c571_32x32.png"></div><div id="wb_element_instance31" class="wb_element" style="text-align: center; width: 100%;"><div class="wb_footer"></div><script type="text/javascript">
+	</script>
+
+</div>
+-->	
+
+				
+<div id="wb_element_instance7" class="wb_element">
+	<a href="https://twitter.com/">
+		<img alt="" src="gallery/811ef58a913e365f552822db5ab1c571_32x32.png">
+	</a>
+</div>
+
+<div id="wb_element_instance31" class="wb_element" style="text-align: center; width: 100%;">
+	<div class="wb_footer"></div>
+	<script type="text/javascript">
 			$(function() {
 				var footer = $(".wb_footer");
 				var html = (footer.html() + "").replace(/^\s+|\s+$/g, "");
@@ -213,5 +234,13 @@
 					footer.height(80);
 				}
 			});
-			</script></div></div><div class="wb_sbg"></div></div></body>
+	</script>
+</div>
+
+</div>
+
+<div class="wb_sbg"></div>
+</div>
+
+</body>
 </html>
