changement des liens qui ne fonctionnait pas

--- a/Accueil.html
+++ b/Accueil.html
@@ -124,13 +124,13 @@
 </div>
 
 <div id="div_bouton_savoirplus_evenementavenir" class="wb_element">
-<a class="wb_button" href="Ev%C3%A9nements/" title="Evenements">
+<a class="wb_button" href="Evenements.html" title="Evenements">
 <span>Savoir plus</span>
 </a>
 </div>
 
 <div id="div_bouton_savoirplus_venezdecouvrir" class="wb_element">
-<a class="wb_button" href="A-visiter/">
+<a class="wb_button" href="A_visiter.html">
 <span>Savoir plus</span>
 </a>
 </div>
@@ -140,7 +140,7 @@
 </div>
 
 <div id="div_bouton_savoirplus_conseilsdevoyage" class="wb_element">
-<a class="wb_button" href="Guide-pratique/">
+<a class="wb_button" href="Guide_pratique.html">
 <span>Savoir plus</span>
 </a>
 </div>
