resolution du décalage page evenement

--- a/Evenements.html
+++ b/Evenements.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="root">
-    	<header>
+    	<header class="vbox wb_container">
             <div class="wb_element" id="menu">
                 <ul class="hmenu">
                     <li>
