--- a/Accueil.html
+++ b/Accueil.html
@@ -17,16 +17,24 @@
 
 	<link href="css/site.css?v=1.0.13" rel="stylesheet" type="text/css" />
 	<link href="css/common.css?ts=1445243437" rel="stylesheet" type="text/css" />
-	<link href="css/Accueil.css?ts=1445243437" rel="stylesheet" type="text/css" />
+	<link href="css/Accueil.less?ts=1445243437" rel="stylesheet/less" type="text/css" />
 	
-	<script type="text/javascript">var currLang = '';</script>		
+	<script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
+	
+	<script type="text/javascript">var currLang = '';</script>
+	
+	
+	
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
 
-<body><div class="root"><div class="vbox wb_container" id="wb_header">
+<body>
+<div class="root">
+
+<div class="vbox wb_container" id="wb_header">
 	
 <!-- Début Div pour le menu -->
 <div id="div_menu" class="wb_element">
