--- a/A_Visiter.html
+++ b/A_Visiter.html
@@ -17,7 +17,9 @@
 
 	<link href="css/site.css?v=1.0.13" rel="stylesheet" type="text/css" />
 	<link href="css/common.css?ts=1445243437" rel="stylesheet" type="text/css" />
-	<link href="css/A_Visiter.css?ts=1445243437" rel="stylesheet" type="text/css" />
+	<link href="css/A_Visiter.less?ts=1445243437" rel="stylesheet/less" type="text/css" />
+	
+	<script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
 	
 	<script type="text/javascript">var currLang = '';</script>		
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -29,14 +31,14 @@
 
 <body><div class="root"><div class="vbox wb_container" id="wb_header">
 	
-<div id="wb_element_instance32" class="wb_element">
+<div id="menu" class="wb_element">
 	<ul class="hmenu">
 		<li><a href="Accueil.html" target="_self" title="Accueil">Accueil</a></li>
 		<li><a href="Evenements.html" target="_self" title="Evénements">Evénements</a></li>
 		<li class="active"><a href="A_Visiter.html" target="_self" title="A visiter">A visiter</a></li>
 		<li><a href="Guide_Pratique.html"  title="Guide pratique">Guide pratique</a></li>
 	</ul>
-</div><div id="wb_element_instance33" class="wb_element"><div></div></div><div id="wb_element_instance34" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle" style="text-align: center;"><strong>Ile De France</strong></h4>
+</div><div id="logo_position" class="wb_element"><div></div></div><div id="logo" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle" style="text-align: center;"><strong>Ile De France</strong></h4>
 
 <p style="text-align: center;"> </p>
 </div></div>
