--- a/Accueil.html
+++ b/Accueil.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -100,16 +100,19 @@
 
 <div id="div_image_evenementavenir" class="wb_element"><img alt="" src="gallery/686bf0c5fd902395485feb2ef50c6be7_400x200.jpg"></div>
 
-<div id="div_image_venezdecouvrirnotreregion" class="wb_element"><img alt="" src="gallery/723f74ae189bb232086ca1c5cf24511b_400x200.jpg"></div>
+<div id="div_image_venezdecouvrirnotreregion" class="wb_element"><img alt="" 
+src="gallery/723f74ae189bb232086ca1c5cf24511b_400x200.jpg"></div>
 
 <div id="div_venezdecouvrirnotreregion" class="wb_element" style=" line-height: normal;">
 <h2 class="wb-stl-heading2">Venez découvrir notre région</h2>
-<br/><p class="wb-stl-normal">Nos huit départements sont prêt à vous accueillir. Riche par sa diversité, l'île de France est un veritable centre  culturel. Vous y trouverez également de nombreuse activité pour tout les goûts.</p>
+<br/><p class="wb-stl-normal">Nos huit départements sont prêt à vous accueillir. Riche par sa diversité, l'île de France est un 
+veritable centre  culturel. Vous y trouverez également de nombreuse activité pour tout les goûts.</p>
 </div>
 
 <div id="div_evenementavenir" class="wb_element" style=" line-height: normal;">
 <h2 class="wb-stl-heading2">Evenement à venir...</h2>
-<br/><p class="wb-stl-normal">Notre région bouge et de nombreux événements sont organisés. Venez profiter de sont dynamisme et de sa diversité.</p>
+<br/><p class="wb-stl-normal">Notre région bouge et de nombreux événements sont organisés. Venez profiter de sont dynamisme et de sa 
+diversité.</p>
 </div>
 
 <div id="div_cadre_conseilsdevoyage" class="wb_element">
@@ -171,8 +174,10 @@
 		<!-- Début Div pour le menu -->
 		<div id="div_menu" class="wb_element">
 			<ul class="hmenu">
-				<li class="active"><a href="Accueil.html" target="_self" title="Accueil">Accueil</a></li> <!-- On peut enlever le target ?! -->
-				<li><a href="Evenements.html" target="_self" title="Evénements">Evénements</a></li> <!-- On peut enlever le target ?! -->
+				<li class="active"><a href="Accueil.html" target="_self" title="Accueil">Accueil</a></li> <!-- On peut enlever le 
+target ?! -->
+				<li><a href="Evenements.html" target="_self" title="Evénements">Evénements</a></li> <!-- On peut enlever le target ?! 
+-->
 				<li><a href="A_Visiter.html" target="_self" title="A visiter">A visiter</a></li> <!-- On peut enlever le target ?! -->
 				<li><a href="Guide_Pratique.html"  title="Guide pratique">Guide pratique</a></li> <!-- On peut enlever le target ?! -->
 			</ul>
@@ -230,18 +235,22 @@
 		<h1 class="wb-stl-heading1" style="text-align: center;">Visites inoubliables</h1>
 		</div>
 
-		<div id="div_image_evenementavenir" class="wb_element"><img alt="" src="gallery/686bf0c5fd902395485feb2ef50c6be7_400x200.jpg"></div>
+		<div id="div_image_evenementavenir" class="wb_element"><img alt="" 
+src="gallery/686bf0c5fd902395485feb2ef50c6be7_400x200.jpg"></div>
 
-		<div id="div_image_venezdecouvrirnotreregion" class="wb_element"><img alt="" src="gallery/723f74ae189bb232086ca1c5cf24511b_400x200.jpg"></div>
+		<div id="div_image_venezdecouvrirnotreregion" class="wb_element"><img alt="" 
+src="gallery/723f74ae189bb232086ca1c5cf24511b_400x200.jpg"></div>
 
 		<div id="div_venezdecouvrirnotreregion" class="wb_element" style=" line-height: normal;">
 		<h2 class="wb-stl-heading2">Venez découvrir notre région</h2>
-		<br/><p class="wb-stl-normal">Nos huit départements sont prêt à vous accueillir. Riche par sa diversité, l'île de France est un veritable centre  culturel. Vous y trouverez également de nombreuse activité pour tout les goûts.</p>
+		<br/><p class="wb-stl-normal">Nos huit départements sont prêt à vous accueillir. Riche par sa diversité, l'île de France est 
+un veritable centre  culturel. Vous y trouverez également de nombreuse activité pour tout les goûts.</p>
 		</div>
 
 		<div id="div_evenementavenir" class="wb_element" style=" line-height: normal;">
 		<h2 class="wb-stl-heading2">Evenement à venir...</h2>
-		<br/><p class="wb-stl-normal">Notre région bouge et de nombreux événements sont organisés. Venez profiter de sont dynamisme et de sa diversité.</p>
+		<br/><p class="wb-stl-normal">Notre région bouge et de nombreux événements sont organisés. Venez profiter de sont dynamisme 
+et de sa diversité.</p>
 		</div>
 
 		<div id="div_cadre_conseilsdevoyage" class="wb_element">
@@ -277,7 +286,8 @@
 		</div>
 
 		<div id="div_ecriture_paragraphe_conseilsdevoyage" class="wb_element" style=" line-height: normal;">
-		<p class="wb-stl-normal">Tout ce dont vous avait besoin pour réussir votre visite. Fort de son réseau de transport performant vous pourrez vous deplacez en toute facilité.</p>
+		<p class="wb-stl-normal">Tout ce dont vous avait besoin pour réussir votre visite. Fort de son réseau de transport performant 
+vous pourrez vous deplacez en toute facilité.</p>
 		</div>
 
 		<div id="div_bouton_savoirplus_conseilsdevoyage" class="wb_element">
@@ -287,11 +297,13 @@
 		</div>
 
 		<div id="div_trait_visiteinoubliable" class="wb_element">
-		<div style="font-size: 1px; overflow: hidden; line-height: 1px; padding: 0; background: transparent; float: none; position: relative; margin: 1px 0 0 0; width: 100%; height: 1px; left: 0; top: 50%; border-top: 1px solid #b5a48d;"></div>
+		<div style="font-size: 1px; overflow: hidden; line-height: 1px; padding: 0; background: transparent; float: none; position: 
+relative; margin: 1px 0 0 0; width: 100%; height: 1px; left: 0; top: 50%; border-top: 1px solid #b5a48d;"></div>
 		</div>
 
 		<div id="div_trait_conseilsdevoyage" class="wb_element">
-		<div style="font-size: 1px; overflow: hidden; line-height: 1px; padding: 0; background: transparent; float: none; position: relative; margin: 1px 0 0 0; width: 100%; height: 1px; left: 0; top: 50%; border-top: 1px solid #b5a48d;"></div>
+		<div style="font-size: 1px; overflow: hidden; line-height: 1px; padding: 0; background: transparent; float: none; position: 
+relative; margin: 1px 0 0 0; width: 100%; height: 1px; left: 0; top: 50%; border-top: 1px solid #b5a48d;"></div>
 		</div>
 
 		<div id="wb_element_instance30" class="wb_element" style="width: 100%;">
@@ -329,7 +341,8 @@
 		</div>
 			
 		<div id="div_ecriture_nombasdepage" class="wb_element" style=" line-height: normal;">
-			<p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
+			<p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> 
+GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
 			<p class="wb-stl-footer" style="text-align: center;">© 2015 <a href="http://idf.16mb.com">idf.16mb.com</a></p>
 		</div>
 
