--- a/Guide_Pratique.html
+++ b/Guide_Pratique.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>Contacts</title>
+	<title>Guide pratique</title>
 	<base href="{{base_url}}" />
 			<meta name="viewport" content="width=992" />
 		<meta name="description" content="" />
@@ -17,13 +17,11 @@
 
 	<link href="css/site.css?v=1.0.13" rel="stylesheet" type="text/css" />
 	<link href="css/common.css?ts=1445243438" rel="stylesheet" type="text/css" />
-	<link href="css/Guide_Pratique.css?ts=1445243438" rel="stylesheet" type="text/css" />
-	
+    <link href="css/Guide_Pratique.less?ts=1445243437" rel="stylesheet/less" type="text/css" />
+    
+    <script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
 	<script type="text/javascript">var currLang = '';</script>		
-	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-	<!--[if lt IE 9]>
-	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+    
 </head>
 
 
