--- a/Evenements.html
+++ b/Evenements.html
@@ -19,9 +19,8 @@
     </script>
     <link href="css/site.css?v=1.0.13" rel="stylesheet" type="text/css">
     <link href="css/common.css?ts=1445243439" rel="stylesheet" type="text/css">
-    <link href="css/Evenements.css?ts=1445243439" rel="stylesheet" type=
-    "text/css">
-    <script type="text/javascript">
+    <link href="css/Evenements.less?ts=1445243439" rel="stylesheet/less" type="text/css">
+    <script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
     var currLang = '';
     </script><!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
