debut css -> Less page evenement

--- a/Evenements.html
+++ b/Evenements.html
@@ -21,8 +21,8 @@
     <link href="css/common.css?ts=1445243439" rel="stylesheet" type="text/css">
     <link href="css/Evenements.less?ts=1445243439" rel="stylesheet/less" type="text/css">
     <script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
-    var currLang = '';
-    </script><!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <script type="text/javascript">var currLang = '';</script>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
