Arrangement du html et css de Accueil

--- a/Accueil.html
+++ b/Accueil.html
@@ -29,7 +29,7 @@
 
 	<body>
 		<div class="root">
-			<div class="vbox wb_container" id="wb_header">
+			<header class="vbox wb_container" id="wb_header">
 		
 				<!-- Début Div pour le menu -->
 				<div id="div_menu" class="wb_element">
@@ -49,8 +49,10 @@
 					<h1 class="wb-stl-pagetitle">Ile De France</h1> <!-- Ecrit "ile de france" -->
 				</div>
 				<!-- Fin Div pour le titre "ile de france-->
+			</header>
 
 
+			<div class="vbox wb_container" id="haut_de_page">
 				<!-- Affiche "Paris" au centre -->
 				<div id="div_ecriture_Paris" class="wb_element" style=" line-height: normal;">
 					<h4 class="wb-stl-pagetitle" style="text-align: center;">Paris</h4>
@@ -66,34 +68,30 @@
 					<div></div>
 				</div>
 
-				<div id="div_ecriture_LaRegionParisienne" class="wb_element" style=" line-height: normal;">
-					<p class="wb-stl-normal" style="text-align: center;">
-						<font face="Sylfaen" color="#ffffff">
-							<span style="font-size: 20px; line-height: normal;">La region Parisienne</span>
-						</font>
-					</p>
+				<div id="div_ecriture_LaRegionParisienne" class="wb_element">
+					<p class="wb-stl-normal">La region Parisienne</p>
 				</div> <!-- Ligne trop bizarre à modifier -->
 
 
 				<div id="div_bouton_LaRegionParisienne_enSavoirPlus" class="wb_element">
 					<a class="wb_button" href="A_Visiter.html">
-						<span>Savoir plus</span>
+						Savoir plus
 					</a>
 				</div>
 
 
 				<div id="div_ecriture_guidevoyage" class="wb_element" style=" line-height: normal;">
-					<p class="wb-stl-footer" style="text-align: center;">
+					<p class="wb-stl-footer">
 						<span class="wb-stl-highlight">GUIDE DE VOYAGE</span>
 					</p>
 				</div>
-			</div> <!-- A modifier !!! -->     
+			</div>
 
 
 			<div class="vbox wb_container" id="wb_main">
 
 				<div id="div_ecriture_visiteinoubliable" class="wb_element" style=" line-height: normal;">
-					<h1 class="wb-stl-heading1" style="text-align: center;">Visites inoubliables</h1>
+					<h1 class="wb-stl-heading1">Visites inoubliables</h1>
 				</div>
 
 				<div id="div_image_evenementavenir" class="wb_element">
@@ -198,17 +196,24 @@
 			<div class="vbox wb_container" id="wb_footer" style="height: 139px;">
 
 
-				<div id="wb_element_instance3" class="wb_element">
-					<a href="https://www.facebook.com">
+				<div id="div_instagram" class="wb_element">
+					<a href="https://www.instagram.com/">
 						<img alt="" src="gallery/620e9a7ba8fb46b75a618371403c9881_32x32.png">
 					</a>
 				</div>
 
-				<div id="wb_element_instance4" class="wb_element">
+				<div id="div_facebook" class="wb_element">
 					<a href="https://www.facebook.com">
 						<img alt="" src="gallery/b43a79758d09eb281e1de2dbbba6525e_32x32.png">
 					</a>
 				</div>
+
+				<div id="div_twitter" class="wb_element">
+					<a href="https://twitter.com/">
+						<img alt="" src="gallery/811ef58a913e365f552822db5ab1c571_32x32.png">
+					</a>
+				</div>
+
 
 				<div id="div_ecriture_nombasdepage" class="wb_element" style=" line-height: normal;">
 					<p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> 
@@ -220,11 +225,7 @@
 				</div>
 
 
-				<div id="wb_element_instance7" class="wb_element">
-					<a href="https://twitter.com/">
-						<img alt="" src="gallery/811ef58a913e365f552822db5ab1c571_32x32.png">
-					</a>
-				</div>
+
 
 				<div id="wb_element_instance31" class="wb_element" style="text-align: center; width: 100%;">
 					<div class="wb_footer"></div>
@@ -248,5 +249,3 @@
 
 	</body>
 </html>
-
-#1ba18b
