Accueil less et html, ajout carte dans menu et remplacement en savoir plus sur la region par carte, début de simplification et de factorisation de code en less.

--- a/Accueil.html
+++ b/Accueil.html
@@ -32,10 +32,21 @@
 				<!-- Début Div pour le menu -->
 				<div id="div_menu" class="wb_element">
 					<ul class="hmenu">
-						<li class="active"><a href="Accueil.html" target="_self" title="Accueil">Accueil</a></li> <!-- On peut enlever le target ?! -->
-						<li><a href="Evenements.html" target="_self" title="Evénements">Evénements</a></li> <!-- On peut enlever le target ?! -->
-						<li><a href="A_Visiter.html" target="_self" title="A visiter">A visiter</a></li> <!-- On peut enlever le target ?! -->
-						<li><a href="Guide_Pratique.html"  title="Guide pratique">Guide pratique</a></li> <!-- On peut enlever le target ?! -->
+						<li class="active">
+							<a href="Accueil.html" target="_self" title="Accueil">Accueil</a>
+						</li>
+						<li>
+							<a href="Evenements.html" target="_self" title="Evénements">Evénements</a>
+						</li> 
+						<li>
+							<a href="A_Visiter.html" target="_self" title="A visiter">A visiter</a>
+						</li>
+						<li>
+							<a href="Guide_Pratique.html"  title="Guide pratique">Guide pratique</a>
+						</li>	
+						<li>
+							<a href="Carte.html"  title="Carte">Carte</a>
+						</li>
 					</ul>
 				</div>
 				<!-- Fin Div pour le menu -->
@@ -71,9 +82,9 @@
 				</div> <!-- Ligne trop bizarre à modifier -->
 
 
-				<div id="div_bouton_LaRegionParisienne_enSavoirPlus" class="wb_element">
-					<a class="wb_button" href="A_Visiter.html">
-						Savoir plus
+				<div id="div_bouton_LaRegionParisienne_carte" class="wb_element">
+					<a class="wb_button" href="Carte.html">
+						Carte
 					</a>
 				</div>
 
