Less teminer sur evenement et modif icon social

--- a/Evenements.html
+++ b/Evenements.html
@@ -177,11 +177,11 @@
         <footer>
         <div class="vbox wb_container" id="wb_footer" style="height: 139px;">
             <div class="wb_element" id="image_instagram">
-                <a href="https://www.facebook.com"><img alt="" src=
+                <a href="https://www.instagram.com/"><img alt="" src=
                 "gallery/620e9a7ba8fb46b75a618371403c9881_32x32.png"></a>
             </div>
             <div class="wb_element" id="image_facebook">
-                <a href="https://twitter.com/"><img alt="" src=
+                <a href="https://www.facebook.com"><img alt="" src=
                 "gallery/b43a79758d09eb281e1de2dbbba6525e_32x32.png"></a>
             </div>
             <div class="wb_element" id="nom_footer" style=
@@ -192,28 +192,12 @@
                 <p class="wb-stl-footer" style="text-align: center;">© 2015
                 <a href="http://idf.16mb.com">idf.16mb.com</a></p>
             </div>
-            <div class="wb_element" id="zyro">
-                <div class="wb-stl-footer" style="white-space: nowrap;">
-                    Membre de <i class="icon-wb-logo"></i><a href=
-                    "http://zyro.com/examples/" target="_blank" title=
-                    "Zyro - Website Builder">Zyro</a>
-                </div>
-                <script type="text/javascript">
-                var _siteProBadge = _siteProBadge || [];
-                _siteProBadge.push({hash: "69cb9287f5604756460be9537d2c07ff", cont: "zyro"});
-
-                (function() {
-                    var script = document.createElement("script");
-                    script.type = "text/javascript";
-                    script.async = true;
-                    script.src = "http://zyro.com/examples/getjs/";
-                    var s = document.getElementsByTagName("script")[0];
-                    s.parentNode.insertBefore(script, s);
-                })();
-                </script>
+            
+            <div class="wb_element" id="image_twiter">
+                <a href="https://twitter.com/"><img alt="" src=
+                "gallery/811ef58a913e365f552822db5ab1c571_32x32.png">
+                </a>
             </div>
-            <div class="wb_element" id="image_twiter"><img alt="" src=
-            "gallery/811ef58a913e365f552822db5ab1c571_32x32.png"></div>
             <div class="wb_element" id="wb_element_instance108" style=
             "text-align: center; width: 100%;">
                 <div class="wb_footer"></div>
