--- a/Evenements.html
+++ b/Evenements.html
@@ -48,6 +48,8 @@
                         <a href="Guide_Pratique.html" title=
                         "Guide pratique">Guide pratique</a>
                     </li>
+                    <li><a href="Carte.html"  title=
+                        "Carte">Carte</a></li>
                 </ul>
             </div>
             <div class="wb_element" id="logo">
