--- a/Guide_Pratique.html
+++ b/Guide_Pratique.html
@@ -39,6 +39,7 @@
 		<li><a href="Evenements.html" target="_self" title="Evénements">Evénements</a></li>
 		<li><a href="A_Visiter.html" target="_self" title="A visiter">A visiter</a></li>
 		<li class="active"><a href="Guide_Pratique.html" target="_self" title="Guide pratique">Guide pratique</a></li>
+		<li><a href="Carte.html"  title="Carte">Carte</a></li>
 	</ul>
 </div><div id="wb_element_instance65" class="wb_element"><div></div></div><div id="wb_element_instance66" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle" style="text-align: center;"><strong>Ile De France</strong></h4>
 
