modif less a visiter

--- a/A_Visiter.html
+++ b/A_Visiter.html
@@ -29,7 +29,7 @@
 </head>
 
 
-<body><div class="root"><div class="vbox wb_container" id="wb_header">
+<body><div class="container"><div class="vbox wb_container" id="wb_header">
 	
 <div id="menu" class="wb_element">
 	<ul class="hmenu">
@@ -45,10 +45,10 @@
 </div></div>
 <div class="vbox wb_container" id="wb_main">
 	
-<div id="wb_element_instance40" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal" style="text-align: center;">Musée des arts et civilisations d'Afrique, d'Asie,</p>
+<div id="wb_element_instance40" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal" style="text-align: center;">Musée des arts et civilisations d'Afrique, d'Asie, d'Océanie et des Amériques</p>
+</div>
 
-<p class="wb-stl-normal" style="text-align: center;">d'Océanie et des Amériques</p>
-</div><div id="wb_element_instance41" class="wb_element"><img alt="" src="gallery/f832e12137692500aad4d0dc3c927e25_410x287.jpg"></div><div id="wb_element_instance42" class="wb_element" style=" line-height: normal;"><p><sub>Centre Georges Pompidou (vue exterieur)</sub></p>
+<div id="wb_element_instance41" class="img-responsive"><img alt="" src="gallery/f832e12137692500aad4d0dc3c927e25_410x287.jpg" alt="Cinque Terre" width="304" height="236"></div><div id="wb_element_instance42" class="wb_element" style=" line-height: normal;"><p><sub>Centre Georges Pompidou (vue exterieur)</sub></p>
 </div><div id="wb_element_instance43" class="wb_element" style=" line-height: normal;"><p> </p>
 
 <h5 class="wb-stl-subtitle" style="text-align: center;"><strong>Château de Versailles</strong></h5>
@@ -56,7 +56,7 @@
 <p class="wb-stl-normal" style="text-align: justify;"> </p>
 
 <p class="wb-stl-normal" style="text-align: justify;">Au fil des appartements, de l’opéra et de la chapelle, découvrez une architecture et un décor d’une telle beauté que votre imagination ne saurait les concevoir.</p>
-
+ 
 <p class="wb-stl-normal" style="text-align: justify;">La Galerie des Glaces, rénovée en 2007, est un enchantement. Recouvert de mille miroirs et lustres majestueux, cette salle a été ainsi décorée afin de permettre au Roi de voir son reflet en entier, un véritable luxe pour l’époque ! Ne manquez pas également la Chambre de la Reine, restée intacte depuis son départ au moment de la Révolution française.</p>
 
 <p class="wb-stl-normal" style="text-align: justify;">Et pour profiter de ce luxe à l’extérieur, flânez dans les jardins du château conçus par Le Nôtre. Fontaines, bosquets, topiaires et sculptures ornent cet immense espace de promenade.</p>
