responsive evenement -> terminer

--- a/Evenements.html
+++ b/Evenements.html
@@ -176,7 +176,7 @@
                 </script>
             </div>
         </div>
-        <div class="vbox wb_container" id="wb_footer" style="height: 139px;">
+        <div class="vbox wb_container" id="wb_footer" >
 
 
                 <div id="div_instagram" class="wb_element">
@@ -199,7 +199,7 @@
 
 
                 <div id="div_ecriture_nombasdepage" class="wb_element" style=" line-height: normal;">
-                    <p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> 
+                    <p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Younes -<strong> 
                             GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane
                     </p>
                     <p class="wb-stl-footer" style="text-align: center;">© 2015 
