--- a/Guide_Pratique.html
+++ b/Guide_Pratique.html
@@ -35,16 +35,13 @@
         <div class="vbox wb_container" id="wb_header">
 
             <div id="menu" class="wb_element"><a class="btn btn-default btn-collapser"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
-                <ul class="hmenu">
-                    <li><a href="Accueil/" target="_self" title="Accueil">Accueil</a>
-                    </li>
-                    <li><a href="Evénements/" target="_self" title="Evénements">Evénements</a>
-                    </li>
-                    <li><a href="A-visiter/" target="_self" title="A visiter">A visiter</a>
-                    </li>
-                    <li class="active"><a href="Guide-pratique/" target="_self" title="Guide pratique">Guide pratique</a>
-                    </li>
-                </ul>
+					<ul class="hmenu">
+						<li><a href="Accueil.html" target="_self" title="Accueil">Accueil</a></li>
+						<li><a href="Evenements.html" target="_self" title="Evénements">Evénements</a></li> 
+						<li><a href="A_Visiter.html" target="_self" title="A visiter">A visiter</a></li>
+						<li class="active"><a href="Guide_Pratique.html"  title="Guide pratique">Guide pratique</a></li>	
+						<li><a href="Carte.html"  title="Carte">Carte</a></li>
+					</ul>
                 <script type="text/javascript">
                     (function() {
                         var isOpen = false,
