modif A_Visiter.html

--- a/A_Visiter.html
+++ b/A_Visiter.html
@@ -49,6 +49,9 @@
                     <li>
 						<a href="Guide_Pratique.html"  title="Guide pratique">Guide pratique</a>
                     </li>
+                <li>
+                        <a href="Carte.html" title="Carte">Carte</a>
+                    </li>
                 </ul>
                  <script type="text/javascript">  <!-- ca c est important c est pour le menu quand tu me reduis -->
                     (function() {
