--- a/Accueil.html
+++ b/Accueil.html
@@ -37,7 +37,7 @@
             <div id="div_menu" class="wb_element"><a class="btn btn-default btn-collapser"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
                 <ul class="hmenu">
                     <li class="active"><a href="Accueil/" title="Accueil">Accueil</a> </li>
-                    <li><a href="Evénements.html" title="Evénements">Evénements</a> </li>
+                    <li><a href="Evenements.html" title="Evénements">Evenements</a> </li>
                     <li><a href="A_Visiter.html" title="A visiter">A visiter</a> </li>
                     <li><a href="GuidePratique.html/" title="Guide pratique">Guide pratique</a></li>
                 </ul>
