--- a/Guide_Pratique.html
+++ b/Guide_Pratique.html
@@ -206,8 +206,7 @@
             <div id="div_footer_nosNoms" class="wb_element" style=" line-height: normal;">
                 <p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
 
-                <p class="wb-stl-footer" style="text-align: center;">© 2015 <a href="http://idf.16mb.com">idf.16mb.com</a>
-                </p>
+                <p class="wb-stl-footer" style="text-align: center;">© 2015 </p>
             </div>
             
             <div id="wb_element_instance71" class="wb_element"><img alt="" src="gallery_gen/811ef58a913e365f552822db5ab1c571_32x32.png">
