--- a/Accueil.html
+++ b/Accueil.html
@@ -36,10 +36,10 @@
 
             <div id="div_menu" class="wb_element"><a class="btn btn-default btn-collapser"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
                 <ul class="hmenu">
-                    <li class="active"><a href="Accueil/" title="Accueil">Accueil</a> </li>
+                    <li class="active"><a href="Accueil.html" title="Accueil">Accueil</a> </li>
                     <li><a href="Evenements.html" title="Evénements">Evenements</a> </li>
                     <li><a href="A_Visiter.html" title="A visiter">A visiter</a> </li>
-                    <li><a href="GuidePratique.html/" title="Guide pratique">Guide pratique</a></li>
+                    <li><a href="Guide_Pratique.html" title="Guide pratique">Guide pratique</a></li>
                 </ul>
                 <script type="text/javascript">
                     (function() {
@@ -191,7 +191,7 @@
             <div id="ecritureFooter" class="wb_element" style=" line-height: normal;">
                 <p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
 
-                <p class="wb-stl-footer" style="text-align: center;">© 2015 <a href="http://idf.16mb.com">idf.16mb.com</a>  </p>
+                <p class="wb-stl-footer" style="text-align: center;">© 2015</p>
             </div>
 
             <div id="boutonTwitter" class="wb_element">
