page evenement terminer

--- a/Evenements.html
+++ b/Evenements.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <title>Découvrir</title>
+    <title>Evenements</title>
     <base href="{{base_url}}">
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name=
     "viewport">
@@ -44,7 +44,7 @@
                     </li>
                     <li class="active">
                         <a href="Evenements.html" target="_self" title=
-                        "Evénements">Evénements</a>
+                        "Evénements">Evenements</a>
                     </li>
                     <li>
                         <a href="A_Visiter.html" title="A visiter">A visiter</a>
@@ -206,7 +206,7 @@
                 <strong>RAHMOUNI</strong> Younes     - <strong>GEZGIN</strong>
                 Numan - <strong>BOUDJEMA</strong> Riwane</p>
                 <p class="wb-stl-footer" style="text-align: center;">© 2015
-                <a href="http://idf.16mb.com">idf.16mb.com</a></p>
+                </p>
             </div>
             <div class="wb_element" id="div_zyro">
                 
