--- a/Guide_Pratique.html
+++ b/Guide_Pratique.html
@@ -18,7 +18,11 @@
 
     <link href="css/site.css?v=1.0.14" rel="stylesheet" type="text/css" />
     <link href="css/common.css?ts=1449768609" rel="stylesheet" type="text/css" />
+<!--    <link href="css/Guide_Pratique.css" rel="stylesheet" type="text/css" />-->
+    
+    
     <link href="css/Guide_Pratique.css" rel="stylesheet" type="text/css" />
+	<script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         var currLang = '';
@@ -152,6 +156,7 @@
                 </p>
 
                 <p style="text-align: right;"><a data-type="url" data-url="http://www.ratp.fr" href="http://www.ratp.fr">www.ratp.fr</a>
+                </br></br>
                 </p>
 
                 <h5 class="wb-stl-subtitle">SuperShuttle Paris</h5>
@@ -159,6 +164,7 @@
                 <p class="wb-stl-normal">C'est la navette partagée idéale. Economique et écologique, elle vous conduit entre l’adresse de votre choix et votre terminal d'aéroport (Roissy Charles de Gaulle, Orly et Beauvais). Le service est disponible 24h/24 et 7j/7 vers ou depuis Paris, proche banlieue et Disneyland Paris en couse partagée (avec arrêts en chemin) ou course privée (véhicule 7 à 8 places).</p>
 
                 <p style="text-align: right;"><a data-target="true" data-type="url" data-url="http://www.supershuttle.fr" href="http://www.supershuttle.fr" target="_blank">www.supershuttle.fr</a>
+                </br></br></br>
                 </p>
 
                 <h5 class="wb-stl-subtitle">Noctilien</h5>
@@ -166,6 +172,7 @@
                 <p class="wb-stl-normal">Pour passer une folle nuit parisienne sans se soucier de l'heure, comptez sur les noctiliens : ces bus remplacent les métros et RERd'Ile-de-France de 0h30 à 5h30 chaque nuit sur les plus grands axes dela capitale. Vous reconnaîtrez les stations grâce au panneau blanc sur fond bleu où le N de Noctilien est entouré d'une lune blanche et surmonté de l'étoile rouge, symbole de la Région l'Ile-de-France.</p>
 
                 <p style="text-align: right;"><a data-target="true" data-type="url" data-url="http://www.vianavigo.com" href="http://www.vianavigo.com" target="_blank">www.vianavigo.com</a>
+                 </br></br></br>
                 </p>
 
                 <h5 class="wb-stl-subtitle"><span style="background-color: transparent;">Paris l'Open Tour</span></h5>
@@ -173,6 +180,7 @@
                 <p class="wb-stl-normal">Avec leurs quatre circuits, les bus Open Tour quadrillent la capitale toute la journée en proposant des visites commentées en 8 langues. De 9h30 à 18h30, ils circulent entre les nombreux arrêts et passent toutes les 10 à 25 minutes selon les circuits. Grâce au Pass 1 ou 2 jours, montez et descendez librement pour visiter tous les sites qui vous font envie !</p>
 
                 <p style="text-align: right;"><a data-target="true" data-type="url" data-url="http://www.visiteparisregion.com" href="http://www.visiteparisregion.com" target="_blank">www.visitparisregion.com</a>
+                </br></br>
                 </p>
 
                 <p class="wb-stl-normal"><span style="color: rgb(59, 51, 3); font-family: Georgia, serif; font-size: 16px; font-style: italic; text-align: justify; background-color: transparent;">Montmartrobus</span>
